--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,12 @@ project(libcozmo)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_BUILD_TYPE Release)
-set(Torch_DIR /home/joonh/cozmo_ws/src)
 
 set(PYBIND11_PYTHON_VERSION 3.5)
 find_package(PythonInterp 3.5 REQUIRED)
 find_package(PythonLibs 3.5 REQUIRED)
 find_package(Torch REQUIRED)
+set("${TORCH_CXX_FLAGS}")
 
 find_package(catkin REQUIRED COMPONENTS 
   roscpp 
@@ -85,6 +85,7 @@ target_link_libraries(
     ${DART_LIBRARIES} 
     ${aikido_LIBRARIES}
     ${PYTHON_LIBRARIES}
+    "${TORCH_LIBRARIES}"
 )
 
 ################################################################################
